# TetrisSimulator

./: .gitmodules  CMakeLists.txt  Logless.rej  README.md  configure.py  prepare_external.sh  spawner_client.sh  todo.txt
client/src/: GameMaster.hpp  ITetrisClient.hpp  NcursesUi.cpp  NcursesUi.hpp  Player.hpp  TetrisClient.hpp  main.cpp  ncurses_shim.h
client/test/: PlayerTest.cpp
cmake/: GenerateProtocol.cmake  Logless.cmake  TetrisDeps.cmake
common/include/: singleton.hpp  tetris_log.hpp
common/src/: Bitmap.cpp  Bitmap.hpp  ITetrisBoard.hpp  StandardTetrisBoard.cpp  StandardTetrisBoard.hpp  Terminoes.hpp  TetrisBoard.cpp  TetrisBoard.hpp  TetrisBoardEvents.hpp
common/test/: BitmapTest.cpp  TerminoesTest.cpp  TetrisBoardTest.cpp
interface/: protocol.cum  protocol.hpp  protocol.plantutml  protocol_export.hpp
server/src/: CommonAttacker.hpp  ConnectionSession.cpp  ConnectionSession.hpp  Game.cpp  Game.hpp  GameTimerId.hpp  IAttacker.hpp  IConnectionSession.hpp  IExecutor.hpp  ITetrisSimulator.hpp  PlayerContext.hpp  TetrisSimulator.hpp  main.cpp
